2011-01-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2.1 Released.

	* AST-2011-001: Stack buffer overflow in SIP channel driver

2011-01-12  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2 Released.

	* Merge in a change in the configure script to fix an issue for
	  Debian packagers.

	  ------------------------------------------------------------------------
	  r301221 | pabelanger | 2011-01-09 15:40:35 -0600 (Sun, 09 Jan 2011)
	  | 21 lines

	  Merged revisions 301220 via svnmerge from 
	  https://origsvn.digium.com/svn/asterisk/branches/1.6.2 [^]

	  ........
	    r301220 | pabelanger | 2011-01-09 16:38:24 -0500 (Sun, 09 Jan
	    2011) | 14 lines
	    SOUND_CACHE_DIR now defaults to empty

	    Sounds files included in the Asterisk tarball were being
	    ignored and
	    re-downloaded. Users wanting to cache the files can
	    still override the setting
	    using the --with-sounds-cache option.

	    (closes issue 0018589)
	    Reported by: pabelanger
	       Patches:
	        issue18589.patch uploaded by
		pabelanger (license 224)
	        Tested by: pabelanger

	    Review:
	    https://reviewboard.asterisk.org/r/1074/

	    ------------------------------------------------------------------------

2010-12-13  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2-rc1 Released.

2010-12-11 21:45 +0000 [r298099]  Alexandr Anikin <may@telecom-service.ru>

	* addons/ooh323c/src/ooGkClient.c: Correction to work with
	  gatekeeper which don't send GK ID Don't use GK ID if it's not
	  presented in GK replies Extract GK ID not only in GK confirm but
	  in GK register confirm also (issue #18401) Reported by: MrHanMan
	  Patches: no-gkid-2.patch uploaded by may213 (license 454) Tested
	  by: may213, MrHanMan

2010-12-10 16:52 +0000 [r298054]  Matthew Nicholson <mnicholson@digium.com>

	* res/res_fax.c: Prevent a memcpy overlap in
	  GENERIC_FAX_EXEC_SET_VARS

2010-12-10 16:26 +0000 [r298051]  Tilghman Lesher <tlesher@digium.com>
